--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,6 +34,17 @@ input:hover {
   /* background-color: red; */
 }
 
+.text {
+	border: inset 1px solid DargGrey;
+	background-color: none;
+}
+
+
+.text:hover {
+	border-top: 2px solid white; 
+  box-shadow: 0px 0px 8px #D3D3D3;
+}
+
 .buttons{
   width:272px;
   margin-left: 5%;
@@ -44,7 +55,7 @@ input:hover {
 .search:hover, 
   .lucky:hover {
   color: black;
-  border: 1px solid DarkGray;
+  box-shadow: inset 0px 0px 0px 1px DarkGray;
 }
 
 .search, 
@@ -68,7 +79,61 @@ span.a {
 /*  background-color: yellow; */
 }
 
-.top-links {
-  color: DarkGrey;
-  
+/*.topnav {
+  top: 0;
+  position: absolute;
+  display: inline-block;
+  width: 100%;
+  background-color: blue;
+  height: 7%;
+  left: 0;
+  right: 0;
+} */
+
+.about,
+  .store, .gmail, .images, .gauffre, .account {
+  text-align: center;
+/*  background-color: LightBlue; */
+  width: 100px;
+  display: inline-block;
+	font-size: 11px;
+	color: black;
+  margin-top: 5px;
+  position: absolute;
+	text-decoration: none;
+	font-family: arial;
+}
+
+.about {
+	left: 0;
+}
+
+.store {
+	left: 50;
+}
+
+.gmail {
+	right:75px;
+	top: 6px;
+}
+
+.images {
+	right:45px;
+	top: 6px;
+}
+
+.gauffre {
+	right: 70px;
+	width: 30px;
+	height: 30px;	
+	border-radius: 20px;
+	border: none;
+}
+
+.account {
+	right: 20px;
+	width: 30px;
+	height: 30px;	
+	border-radius: 20px;
+	border: 1px solid black;
 }
